added encoder class and node

--- a/src/trinity/CMakeLists.txt
+++ b/src/trinity/CMakeLists.txt
@@ -21,18 +21,25 @@ add_executable(motors_node
     src/motors/motor.cpp
     src/gpio.cpp
 )
+add_executable(encoders_node
+    src/motors/encoders_node.cpp
+    src/motors/encoder.cpp
+    src/gpio.cpp
+)
 add_executable(statuslight
     src/statuslight/statuslight.cpp
 )
 add_executable(ir
     src/ir/ir_node.cpp
+    src/gpio.cpp
 )
 
 # Linking:
 set(gpio_LIBS "-lpthread -lpigpiod_if2")
-target_link_libraries(motors_node ${catkin_LIBRARIES} ${gpio_LIBS})
-target_link_libraries(statuslight ${catkin_LIBRARIES} ${gpio_LIBS})
-target_link_libraries(ir ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(motors_node   ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(encoders_node ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(statuslight   ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(ir            ${catkin_LIBRARIES} ${gpio_LIBS})
 
 
 #####
