--- a/src/kiwi-drive/CMakeLists.txt
+++ b/src/kiwi-drive/CMakeLists.txt
@@ -16,11 +16,11 @@ include_directories(
 )
 
 # Executables:
-add_executable(joystick_drive
-    src/joystick_drive.cpp
-)
+#add_executable(joystick_drive
+#    src/joystick_drive.cpp
+#)
 
 # Linking:
-target_link_libraries(joystick_drive ${catkin_LIBRARIES})
+#target_link_libraries(joystick_drive ${catkin_LIBRARIES})
 
 #set(gpio_LIBS "-lpthread -lpigpiod_if2")
