--- a/src/trinity/CMakeLists.txt
+++ b/src/trinity/CMakeLists.txt
@@ -43,6 +43,10 @@ add_executable(solenoid
     src/solenoid/solenoid_node.cpp
     src/gpio.cpp
 )
+add_executable(leds
+    src/leds/leds_node.cpp
+    src/gpio.cpp
+)
 
 # Linking:
 set(gpio_LIBS "-lpthread -lpigpiod_if2")
@@ -51,6 +55,7 @@ target_link_libraries(encoders_node ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(statuslight   ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(ir            ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(solenoid      ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(leds          ${catkin_LIBRARIES} ${gpio_LIBS})
 
 
 #####
