--- a/kiwi-drive/CMakeLists.txt
+++ b/kiwi-drive/CMakeLists.txt
@@ -15,6 +15,8 @@ find_package(catkin REQUIRED COMPONENTS
     geometry_msgs    
 )
 
+catkin_package()
+
 # Include directories:
 include_directories(
     ${catkin_INCLUDE_DIRS}
