replaced motor and led node with pca9685

--- a/trinity/CMakeLists.txt
+++ b/trinity/CMakeLists.txt
@@ -24,19 +24,15 @@ include_directories(
 )
 
 # Executables
-add_executable(motors_node
-    src/motors/motors_node.cpp
-    src/motors/motor.cpp
-    src/gpio.cpp
-)
 add_executable(encoders_node
-    src/motors/encoders_node.cpp
-    src/motors/encoder.cpp
+    src/encoders/encoders_node.cpp
+    src/encoders/encoder.cpp
     src/gpio.cpp
 )
 add_executable(pca9685_node
     src/pca9685/pca9685_node.cpp
     src/pca9685/pca9685.cpp
+    src/pca9685/motor.cpp
 )
 add_executable(statuslight
     src/statuslight/statuslight.cpp
@@ -50,20 +46,14 @@ add_executable(solenoid
     src/solenoid/solenoid_node.cpp
     src/gpio.cpp
 )
-add_executable(leds
-    src/leds/leds_node.cpp
-    src/gpio.cpp
-)
 
 # Linking:
 set(gpio_LIBS "-lpthread -lpigpiod_if2")
-target_link_libraries(motors_node   ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(encoders_node ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(pca9685_node  ${catkin_LIBRARIES})
 target_link_libraries(statuslight   ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(ir            ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(solenoid      ${catkin_LIBRARIES} ${gpio_LIBS})
-target_link_libraries(leds          ${catkin_LIBRARIES} ${gpio_LIBS})
 
 
 #####
