--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ros-imu-bno055-i2c"]
 	path = ros-imu-bno055-i2c
 	url = https://github.com/dheera/ros-imu-bno055-i2c.git
+[submodule "bno055_usb_stick"]
+	path = bno055_usb_stick
+	url = https://github.com/yoshito-n-students/bno055_usb_stick.git
