--- a/trinity/CMakeLists.txt
+++ b/trinity/CMakeLists.txt
@@ -38,10 +38,6 @@ add_executable(statuslight
     src/statuslight/statuslight.cpp
     src/gpio.cpp
 )
-add_executable(ir
-    src/ir/ir_node.cpp
-    src/gpio.cpp
-)
 add_executable(solenoid
     src/solenoid/solenoid_node.cpp
     src/gpio.cpp
@@ -54,6 +50,12 @@ add_executable(color_sensor
     src/color_sensor/color_sensor_node.cpp
     src/color_sensor/TCS34725.cpp
 )
+#add_executable(control
+#    control/control.cpp
+#    etc...
+#    src/ir/ir.cpp
+#    src/gpio.cpp
+#)
 
 # Linking:
 set(gpio_LIBS "-lpthread -lpigpiod_if2")
@@ -61,9 +63,9 @@ target_link_libraries(encoders_node ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(pca9685_node  ${catkin_LIBRARIES})
 target_link_libraries(color_sensor  ${catkin_LIBRARIES})
 target_link_libraries(statuslight   ${catkin_LIBRARIES} ${gpio_LIBS})
-target_link_libraries(ir            ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(solenoid      ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(servo         ${catkin_LIBRARIES} ${gpio_LIBS})
+#target_link_libraries(control       ${catkin_LIBRARIES} ${gpio_LIBS})
 
 
 #####
