control node fully written, colornode fully written, all compiles.  Everything needs to be tested

--- a/trinity/CMakeLists.txt
+++ b/trinity/CMakeLists.txt
@@ -71,6 +71,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
    FILES
    GetRobotPose.srv
+   GetInRoom.srv
 #   Service2.srv
 )
 
