--- a/trinity_pi/CMakeLists.txt
+++ b/trinity_pi/CMakeLists.txt
@@ -1,29 +1,19 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(trinity)
+project(trinity_pi)
 
-add_compile_options(
-    -std=c++14
-    -Wall
-    -Wextra
-    -Wfatal-errors
-)
+## Compile as C++11, supported in ROS Kinetic and newer
+add_compile_options(-std=c++11 -Wall -Wextra -Wfatal-errors)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-	rospy
-	geometry_msgs
-	message_generation
-	move_base_msgs
-	actionlib
-	tf
-    roscpp
-    std_msgs
-    sensor_msgs
-)
-
-
+find_package(catkin REQUIRED
+            roscpp
+            geometry_msgs
+            tf
+            std_msgs
+            sensor_msgs
+            message_generation )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -44,10 +34,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
 ## * In the file package.xml:
 ##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
+##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
 ##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
 ##     but can be declared for certainty nonetheless:
-##     * add a run_depend tag for "message_runtime"
+##     * add a exec_depend tag for "message_runtime"
 ## * In this file (CMakeLists.txt):
 ##   * add "message_generation" and every package in MSG_DEP_SET to
 ##     find_package(catkin REQUIRED COMPONENTS ...)
@@ -66,12 +56,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-#add_service_files(
-#   FILES
-#   GetRobotPose.srv
-#   GetInRoom.srv
-#   Service2.srv
-)
+add_service_files(
+  FILES
+  GetRobotPose.srv
+  GetInRoom.srv
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -81,10 +70,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-#generate_messages(
-#   DEPENDENCIES
-#   geometry_msgs
-#)
+ generate_messages(
+    DEPENDENCIES
+    std_msgs  
+    geometry_msgs # Or other packages containing msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -93,7 +83,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## To declare and build dynamic reconfigure parameters within this
 ## package, follow these steps:
 ## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
+##   * add a build_depend and a exec_depend tag for "dynamic_reconfigure"
 ## * In this file (CMakeLists.txt):
 ##   * add "dynamic_reconfigure" to
 ##     find_package(catkin REQUIRED COMPONENTS ...)
@@ -111,14 +101,14 @@ find_package(catkin REQUIRED COMPONENTS
 ###################################
 ## The catkin_package macro generates cmake config files for your package
 ## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if you package contains header files
+## INCLUDE_DIRS: uncomment this if your package contains header files
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES trinity
-  CATKIN_DEPENDS roscpp rospy std_msgs sensor_msgs geometry_msgs actionlib move_base_msgs message_runtime tf
+#  LIBRARIES trinity_pi
+   CATKIN_DEPENDS geometry_msgs tf roscpp std_msgs sensor_msgs message_runtime
 #  DEPENDS system_lib
 )
 
@@ -128,68 +118,73 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-	src
+include_directories( 
+ src
+ ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-# add_library(trinity
-#   src/${PROJECT_NAME}/trinity.cpp
+# add_library(${PROJECT_NAME}
+#   src/${PROJECT_NAME}/trinity_pi.cpp
 # )
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(trinity ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-#add_executable(encoders_node
-#    src/encoders/encoders_node.cpp
-#    src/encoders/encoder.cpp
-#    src/gpio.cpp
-#)
-#add_executable(pca9685_node
-#    src/pca9685/pca9685_node.cpp
-#    src/pca9685/pca9685.cpp
-#    src/pca9685/motor.cpp
-#)
-#add_executable(statuslight
-#    src/statuslight/statuslight.cpp
-#    src/gpio.cpp
-#)
-#add_executable(solenoid
-#    src/solenoid/solenoid_node.cpp
-#    src/gpio.cpp
-#)
-#add_executable(servo
-#    src/servo/servo_node.cpp
-#    src/gpio.cpp
-#)
-#add_executable(color_sensor
-#    src/color_sensor/color_sensor_node.cpp
-#    src/color_sensor/TCS34725.cpp
-#)
-#add_executable(control
-#    src/control/control_node.cpp
-#    src/control/control.cpp
-#    )
+## With catkin_make all packages are built within a single CMake context
+## The recommended prefix ensures that target names across packages don't collide
+# add_executable(${PROJECT_NAME}_node src/trinity_pi_node.cpp)
+add_executable(encoders_node
+        src/encoders/encoders_node.cpp
+        src/encoders/encoder.cpp
+        src/gpio.cpp
+ )
+add_executable(pca9685_node
+        src/pca9685/pca9685_node.cpp
+        src/pca9685/pca9685.cpp
+        src/pca9685/motor.cpp
+ )
+add_executable(statuslight
+        src/statuslight/statuslight.cpp
+        src/gpio.cpp
+)
+add_executable(solenoid
+        src/solenoid/solenoid_node.cpp
+        src/gpio.cpp
+ )
+add_executable(servo
+        src/servo/servo_node.cpp
+        src/gpio.cpp
+)
+add_executable(color_sensor
+        src/color_sensor/color_sensor_node.cpp
+        src/color_sensor/TCS34725.cpp
+)
 
+## Rename C++ executable without prefix
+## The above recommended prefix causes long target names, the following renames the
+## target back to the shorter version for ease of user use
+## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
+# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
-# add_dependencies(trinity_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
+# target_link_libraries(${PROJECT_NAME}_node
+#   ${catkin_LIBRARIES}
+# )
 set(gpio_LIBS "-lpthread -lpigpiod_if2")
-#target_link_libraries(encoders_node ${catkin_LIBRARIES} ${gpio_LIBS})
-#target_link_libraries(pca9685_node  ${catkin_LIBRARIES})
-#target_link_libraries(color_sensor  ${catkin_LIBRARIES})
-#target_link_libraries(statuslight   ${catkin_LIBRARIES} ${gpio_LIBS})
-#target_link_libraries(solenoid      ${catkin_LIBRARIES} ${gpio_LIBS})
-#target_link_libraries(servo         ${catkin_LIBRARIES} ${gpio_LIBS})
-target_link_libraries(control       ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(encoders_node ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(pca9685_node  ${catkin_LIBRARIES})
+target_link_libraries(color_sensor  ${catkin_LIBRARIES})
+target_link_libraries(statuslight   ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(solenoid      ${catkin_LIBRARIES} ${gpio_LIBS})
+target_link_libraries(servo         ${catkin_LIBRARIES} ${gpio_LIBS})
 
 #############
 ## Install ##
@@ -203,10 +198,10 @@ target_link_libraries(control       ${catkin_LIBRARIES} ${gpio_LIBS})
 # install(PROGRAMS
 #   scripts/my_python_script
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-#)
+# )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS trinity trinity_node
+# install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -231,7 +226,7 @@ target_link_libraries(control       ${catkin_LIBRARIES} ${gpio_LIBS})
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_trinity.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_trinity_pi.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
