--- a/trinity_pi/package.xml
+++ b/trinity_pi/package.xml
@@ -53,6 +53,7 @@
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
   <exec_depend>message_runtime</exec_depend>
