fix comment style

--- a/trinity_pi/CMakeLists.txt
+++ b/trinity_pi/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(trinity_pi)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++11 -Wall -Wextra -Wfatal-errors)
+set(CMAKE_CXX_STANDARD 11)
+add_compile_options(-Wall -Wextra -Wfatal-errors)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -148,14 +149,14 @@ add_executable(pwm_chip
         src/pwm_chip/pca9685.cpp
         src/pwm_chip/motor.cpp
 )
-//add_executable(gyro_chip
-//        src/gyro_chip/gyro_chip_node.cpp
-//        src/gyro_chip/fxas21002c.cpp
-//)
-//add_executable(accel_mag_chip
-//        src/accel_mag_chip_chip/accel_mag_chip_node.cpp
-//        src/accel_mag_chip_chip/fxos8700.cpp
-//)
+#add_executable(gyro_chip
+#        src/gyro_chip/gyro_chip_node.cpp
+#        src/gyro_chip/fxas21002c.cpp
+#)
+#add_executable(accel_mag_chip
+#        src/accel_mag_chip_chip/accel_mag_chip_node.cpp
+#        src/accel_mag_chip_chip/fxos8700.cpp
+#)
 add_executable(statuslight
         src/statuslight/statuslight.cpp
         src/gpio.cpp
