--- a/trinity/config/costmap_common_params.yaml
+++ b/trinity/config/costmap_common_params.yaml
@@ -1,7 +1,9 @@
 obstacle_range: 0.5
 raytrace_range: 2.0
 robot_radius: 0.14
-inflation_radius: 0.05
+cost_scaling_factor: 10.0
+#footprint: [[-0.14, -0.14], [-0.14, 0.14], [0.14, 0.14], [0.14, -0.14]]
+inflation_radius: 0.00
 observation_sources: laser
 laser: { sensor_frame: laser, data_type: LaserScan, topic: laser, marking: true, clearing: true }
 
