--- a/trinity/config/global_costmap_params.yaml
+++ b/trinity/config/global_costmap_params.yaml
@@ -1,5 +1,19 @@
 global_costmap:
         global_frame: /map
         robot_base_frame: base_link
-        update_frequency: 5.0
-        static_map: false
+        update_frequency: 1.0
+        publish_frequency: 0.5
+        map_topic: "/map"
+        static_map: true
+        always_send_full_costmap: true
+        track_unknown_space: true
+        plugins:
+         -
+          name: static
+          type: "costmap_2d::StaticLayer"
+         -
+          name: obstacles
+          type: "costmap_2d::ObstacleLayer"
+         -
+          name: inflater
+          type: "costmap_2d::InflationLayer"
