--- a/trinity/config/local_costmap_params.yaml
+++ b/trinity/config/local_costmap_params.yaml
@@ -3,8 +3,18 @@ local_costmap:
         robot_base_brame: base_link
         update_frequency: 5.0
         publish_frequency: 2.0
-        static_map: false
+        static_map: true
         rolling_window: true
         width: 2.0
         height: 2.0
         resolution: 0.01
+        plugins:
+         -
+          name: static
+          type: "costmap_2d::StaticLayer"
+         -
+          name: obstacles
+          type: "costmap_2d::ObstacleLayer"
+         -
+          name: inflater
+          type: "costmap_2d::InflationLayer"
