--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rplidar_ros"]
 	path = rplidar_ros
 	url = https://github.com/Slamtec/rplidar_ros.git
+[submodule "RPLidar_Hector_SLAM"]
+	path = RPLidar_Hector_SLAM
+	url = https://github.com/NickL77/RPLidar_Hector_SLAM.git
