--- a/trinity/config/costmap_common_params.yaml
+++ b/trinity/config/costmap_common_params.yaml
@@ -3,7 +3,7 @@ raytrace_range: 2.0
 robot_radius: 0.14
 cost_scaling_factor: 10.0
 #footprint: [[-0.14, -0.14], [-0.14, 0.14], [0.14, 0.14], [0.14, -0.14]]
-inflation_radius: 0.00
+inflation_radius: 0.17
 observation_sources: laser
 laser: { sensor_frame: laser, data_type: LaserScan, topic: laser, marking: true, clearing: true }
-
+transform_tolerance: 1
