--- a/trinity/config/global_costmap_params.yaml
+++ b/trinity/config/global_costmap_params.yaml
@@ -1,12 +1,14 @@
 global_costmap:
-        global_frame: /map
+        global_frame: map
         robot_base_frame: base_link
         update_frequency: 1.0
         publish_frequency: 0.5
         map_topic: "/map"
         static_map: true
+        transform_tolerance: 1
         always_send_full_costmap: true
         track_unknown_space: true
+        resolution: 0.02
         plugins:
          -
           name: static
