--- a/trinity/config/local_costmap_params.yaml
+++ b/trinity/config/local_costmap_params.yaml
@@ -1,13 +1,15 @@
 local_costmap:
-        global_frame: odom
+        global_frame: map
         robot_base_brame: base_link
         update_frequency: 5.0
         publish_frequency: 2.0
+        transform_tolerannce: 1.0 
         static_map: true
         rolling_window: true
         width: 2.0
         height: 2.0
-        resolution: 0.01
+        resolution: 0.02
+        map_topic: '/map'
         plugins:
          -
           name: static
