--- a/trinity/config/costmap_common_params.yaml
+++ b/trinity/config/costmap_common_params.yaml
@@ -1,9 +1,25 @@
 obstacle_range: 0.5
 raytrace_range: 2.0
 robot_radius: 0.14
-cost_scaling_factor: 10.0
-#footprint: [[-0.14, -0.14], [-0.14, 0.14], [0.14, 0.14], [0.14, -0.14]]
-inflation_radius: 0.17
-observation_sources: laser
-laser: { sensor_frame: laser, data_type: LaserScan, topic: laser, marking: true, clearing: true }
+map_type: costmap
 transform_tolerance: 1
+
+obstacles:
+ enabled: true
+ obstacle_range: 0.5
+ raytrace_range: 2.0
+ inflation_radius: 0.05
+ track_unknown_space: true
+ observation_sources: laser
+ laser: {data_type: LaserScan, topic: scan, marking: true, clearing: true}
+
+inflater:
+ enabled: true
+ cost_scaling_factor: 100.0
+ inflation_radius: 0.05
+ observation_sources: laser
+ laser: { sensor_frame: laser, data_type: LaserScan, topic: laser, marking: true, clearing: true }
+
+static:
+ enabled: true
+ map_topic: "/map"
