--- a/kiwi-drive/package.xml
+++ b/kiwi-drive/package.xml
@@ -50,7 +50,11 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
-
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>std_srvs</depend>
+  <depend>trinity_pi</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
