--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,21 +1,8 @@
-FROM osrf/ros:kinetic-desktop-full-xenial
+FROM ros:kinetic-robot
 SHELL ["/bin/bash", "-c"]
 
 COPY ./docker-entrypoint.sh /
 ENTRYPOINT [ "/docker-entrypoint.sh" ]
-
-# INSTALL PIP
-RUN curl https://bootstrap.pypa.io/get-pip.py -o /get-pip.py \
-    && python /get-pip.py \
-    && rm /get-pip.py
-
-# INSTALL CATKIN (per RTD)
-RUN git clone https://github.com/catkin/catkin_tools.git /catkin_tools \
-    && cd /catkin_tools \
-    && git checkout e9504fcd574560bf85118e9edb73ee7eebbfe06f \
-    && pip install -r requirements.txt --upgrade --ignore-installed PyYAML \
-    && python setup.py install --record install_manifest.txt \
-    && rm -rf /catkin_tools
 
 # INSTALL pigpio
 RUN git clone \https://github.com/joan2937/pigpio /pigpio \
@@ -24,11 +11,6 @@ RUN git clone \https://github.com/joan2937/pigpio /pigpio \
     && make install \
     && rm -rf /pigpio
 
-# Initialize Trinity Catkin Workspace
-RUN mkdir -p /home/ros/catkin_ws/src \
-    && cd /home/ros/catkin_ws/ \
-    && catkin init
-
 # Prepare ROS Dep.
 RUN echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list \
     && apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 \
@@ -36,13 +18,14 @@ RUN echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc
     && apt-get update -y \
     && apt-get upgrade -y \
     && apt-get install -y \
-        python-rosdep \
-        python-rosinstall-generator \
-        python-wstool \
-        python-rosinstall \
-        build-essential \
+        python-catkin-tools \
         cmake \
         ros-kinetic-joy
+
+# Initialize Trinity Catkin Workspace
+RUN mkdir -p /home/ros/catkin_ws/src \
+    && cd /home/ros/catkin_ws/ \
+    && catkin init
 
 # Copy & Configure Trinity Source
 COPY src /home/ros/catkin_ws/src
