--- a/trinity/config/local_costmap_params.yaml
+++ b/trinity/config/local_costmap_params.yaml
@@ -8,7 +8,7 @@ local_costmap:
         rolling_window: true
         width: 2.0
         height: 2.0
-        resolution: 0.02
+        resolution: 0.01
         map_topic: '/map'
         plugins:
          -
@@ -20,3 +20,6 @@ local_costmap:
          -
           name: inflater
           type: "costmap_2d::InflationLayer"
+        inflater:
+            cost_scaling_factor: 25.0
+            inflation_radius: 0.18
