--- a/trinity/config/teb_local_planner.yaml
+++ b/trinity/config/teb_local_planner.yaml
@@ -21,10 +21,10 @@ TebLocalPlannerROS:
  max_vel_y: 0.5
  acc_lim_y: 0.2
  acc_lim_x: 0.2
- acc_lim_theta: 0.1
+ acc_lim_theta: 0.15
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-   type: "point"
+   type: "circular"
    radius: 0.15 # for type "circular"
    #line_start: [-0.3, 0.0] # for type "line"
    #line_end: [0.3, 0.0] # for type "line"
@@ -42,14 +42,14 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 0.03
+ min_obstacle_dist: 0.035
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 0.05
  obstacle_poses_affected: 30
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
- inflation_dist: 0.01
+ inflation_dist: 0.05
 
  # Optimization
     
@@ -59,12 +59,12 @@ TebLocalPlannerROS:
  optimization_verbose: False
  penalty_epsilon: 0.1
  weight_max_vel_x: 2
- weight_max_vel_theta: 1
+ weight_max_vel_theta: 0.2
  weight_acc_lim_x: 1
- weight_acc_lim_theta: 1
+ weight_acc_lim_theta: 0.2
  weight_kinematics_nh: 7000
  weight_kinematics_forward_drive: 0
- weight_kinematics_turning_radius: 1
+ weight_kinematics_turning_radius: 0
  weight_optimaltime: 1
  weight_obstacle: 50
  weight_dynamic_obstacle: 10 # not in use yet
