--- a/trinity/config/base_local_planner_params.yaml
+++ b/trinity/config/base_local_planner_params.yaml
@@ -1,11 +1,14 @@
-TrajectoryPlannerROS:
-        max_vel_x: 0.5
-        min_vel_x: 0.3
+DWAPlannerROS:
+        max_vel_x: 0.2
+        min_vel_x: -0.2
+        max_vel_y: 0.2
+        min_vel_y: -0.2
         max_vel_theta: 0.45
         min_in_place_vel_theta: 0.45
         acc_lim_theta: 1
         acc_lim_x: 1
         acc_lim_y: 1
-        holonomic_robot: false
+        holonomic_robot: true
         yaw_goal_tolerance: 0.1
         xy_goal_tolerance: 0.1
+        sim_time: 1.0
