--- a/trinity/config/teb_local_planner.yaml
+++ b/trinity/config/teb_local_planner.yaml
@@ -25,7 +25,7 @@ TebLocalPlannerROS:
  min_turning_radius: 0.0
  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
    type: "circular"
-   radius: 0.15 # for type "circular"
+   radius: 0.14 # for type "circular"
    #line_start: [-0.3, 0.0] # for type "line"
    #line_end: [0.3, 0.0] # for type "line"
    #front_offset: 0.2 # for type "two_circles"
@@ -42,14 +42,14 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 0.035
+ min_obstacle_dist: 0.01
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 0.05
  obstacle_poses_affected: 30
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
- inflation_dist: 0.05
+ inflation_dist: 0.03
 
  # Optimization
     
@@ -58,17 +58,17 @@ TebLocalPlannerROS:
  optimization_activate: True
  optimization_verbose: False
  penalty_epsilon: 0.1
- weight_max_vel_x: 2
+ weight_max_vel_x: 0.5
+ weight_max_vel_y: 0.5
  weight_max_vel_theta: 0.2
  weight_acc_lim_x: 1
  weight_acc_lim_theta: 0.2
- weight_kinematics_nh: 7000
+ weight_kinematics_nh: 1.0
  weight_kinematics_forward_drive: 0
  weight_kinematics_turning_radius: 0
  weight_optimaltime: 1
- weight_obstacle: 50
- weight_dynamic_obstacle: 10 # not in use yet
- alternative_time_cost: False # not in use yet
+ weight_obstacle: 40
+ obstacle_cost_exponent: 10.0
 
  # Homotopy Class Planner
 
