--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -16,7 +16,8 @@ RUN echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc
         ros-kinetic-joy \
         ros-kinetic-move-base-msgs \
         ros-kinetic-rviz \
-        ros-kinetic-rosserial
+        ros-kinetic-rosserial \
+        ros-kinetic-rosserial-server
 
 # Initialize Trinity Catkin Workspace
 RUN mkdir -p /home/ros/catkin_ws/src \
