--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -19,6 +19,10 @@ RUN echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc
         ros-kinetic-rosserial \
         ros-kinetic-rosserial-server
 
+RUN git clone https://github.com/WiringPi/WiringPi.git
+    && cd WiringPi \
+    && ./build
+
 # Initialize Trinity Catkin Workspace
 RUN mkdir -p /home/ros/catkin_ws/src \
     && cd /home/ros/catkin_ws/ \
