--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -19,7 +19,7 @@ RUN echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc
         ros-kinetic-rosserial \
         ros-kinetic-rosserial-server
 
-RUN git clone https://github.com/WiringPi/WiringPi.git
+RUN git clone https://github.com/WiringPi/WiringPi.git \
     && cd WiringPi \
     && ./build
 
