esp stuff compiles now

--- a/esp/esp/Makefile
+++ b/esp/esp/Makefile
@@ -1,4 +1,9 @@
-SKETCH = main.cpp
-CHIP = esp32
+SKETCH 				= main.cpp
+CHIP 				= esp32
+#BOARD				= "ESP32_DEV Dev Module"
+BUILD_EXTRA_FLAGS 	= -std=c++17 -Wall -Wfatal-errors
+#ESP_ROOT			= /home/jackson/.arduino15/packages/esp32/hardware/esp32/1.0.2/
+#INCLUDE_DIRS		= /home/jackson/esp/esp-idf/components/soc/include/
+
 
 include common.mk
