navigation fixes and door code

--- a/trinity/CMakeLists.txt
+++ b/trinity/CMakeLists.txt
@@ -180,6 +180,10 @@ add_executable(fake_node
 	src/control/fake_node.cpp
 	)
 
+add_executable(door_finder
+    src/control/door_finder.cpp
+	)
+
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -195,6 +199,7 @@ set(gpio_LIBS "-lpthread -lpigpiod_if2")
 #target_link_libraries(servo         ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(control       ${catkin_LIBRARIES} ${gpio_LIBS})
 target_link_libraries(fake_node		${catkin_LIBRARIES})
+target_link_libraries(door_finder	${catkin_LIBRARIES})
 #############
 ## Install ##
 #############
