--- a/trinity/config/global_costmap_params.yaml
+++ b/trinity/config/global_costmap_params.yaml
@@ -19,3 +19,6 @@ global_costmap:
          -
           name: inflater
           type: "costmap_2d::InflationLayer"
+        #inflater:
+        #    cost_scaling_factor: 20.0
+        #    inflation_radius: 0.17
